--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h2 class="logo">Logo</h2>
         <nav class="navigation">
             <a href="#" class="active">Home<span></span></a>
-            <a href="#">About<span></span></a>
+            <a href="#About">About<span></span></a>
             <a href="#">Services<span></span></a>
             <a href="#">Contacts<span></span></a>
         </nav>
     </header>
 
     <section class="parallax">
-        <h2 id="text">Parallax Effect</h2>
+        <h2 id="text">Parallax Scrolling</h2>
         <img src="./assets/tree-left.png" id="tree-left">
         <img src="./assets/tree-right.png" id="tree-right">
         <img src="./assets/gate-left.png" id="gate-left">
@@ -29,7 +29,7 @@
     </section>
 
     <section class="sec">
-        <h2>Parallax Scrolling Website</h2>
+        <h2 id="About">Parallax Scrolling Website</h2>
         
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum soluta dicta doloribus ut eaque cum rerum
             in natus exercitationem illum at, unde vitae. Adipisci placeat unde dignissimos quis laudantium id excepturi
@@ -59,7 +59,6 @@
             perferendis ipsam. Sunt aliquid omnis ut obcaecati minus explicabo nemo architecto. Nesciunt ipsam
             exercitationem sequi neque rem.<br><br>
         </p>
-
     </section>
 </body>
 <script src="script.js"></script>
